--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
   - job: 'Build'
     displayName: 'Build job'
     pool:
-      name: Test
+      name: Demo
     
     variables:
       dotnetSdkVersion: '5.x'
