--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,20 +10,22 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  poolName: 'Test'
 
 stages:
 - stage: 'Build'
   displayName: 'Build the web application'
   jobs:
-  - job: 'Build'
+  - job: 'BuildClient'
     displayName: 'Build job'
     pool:
-      name: Demo
+      name: $(poolName)
     
     variables:
       dotnetSdkVersion: '5.x'
 
     steps:
+    # UI Layer
     - task: Npm@1
       displayName: 'Restore Angular Dependencies'
       inputs:
@@ -38,14 +40,15 @@ stages:
         verbose: false
         customCommand: 'run build'
 
-    # - task: Npm@1
-    #   displayName: 'Test UI'
-    #   inputs:
-    #     command: custom
-    #     workingDir: 'ClientApp'
-    #     verbose: false
-    #     customCommand: 'run test'
+    - task: Npm@1
+      displayName: 'Test UI'
+      inputs:
+        command: custom
+        workingDir: 'ClientApp'
+        verbose: false
+        customCommand: 'run test'
 
+    # Middle Layer
     - task: DotNetCoreCLI@2
       displayName: 'Restore project dependencies'
       inputs:
@@ -59,6 +62,7 @@ stages:
         arguments: '--no-restore --configuration $(buildConfiguration)'
         projects: '**/*.csproj'
 
+
     - task: DotNetCoreCLI@2
       displayName: 'Publish the project - $(buildConfiguration)'
       inputs:
@@ -70,3 +74,49 @@ stages:
 
     - publish: '$(Build.ArtifactStagingDirectory)'
       artifact: drop
+
+- stage: 'DeployDev'
+  displayName: 'Deploy to Dev'
+  variables: 
+    appName: 'AS3KDemo'
+  jobs:
+  - deployment: 'Dev'
+    pool:
+      name: test
+    environment: 'Dev'
+    strategy: 
+       runOnce:     
+        deploy:
+          steps:
+           - task: AzureRmWebAppDeployment@4
+             displayName: 'Deploy .NET Code to Azure App Service '
+             inputs:
+              ConnectionType: 'AzureRM'
+              azureSubscription: 'Free Trial (cf12cdda-4e4c-4957-a919-d7dbc60b6fcb)'
+              appType: 'webApp'
+              WebAppName: $(appName)
+              packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+              RuntimeStack: 'DOTNETCORE|5.0'
+
+- stage: 'DeployTest'
+  displayName: 'Deploy to Test'
+  variables: 
+    appName: 'AS3KTest'
+  jobs:
+  - deployment: 'Test'
+    pool:
+      name: test
+    environment: 'Test'
+    strategy: 
+       runOnce:     
+        deploy:
+          steps:
+           - task: AzureRmWebAppDeployment@4
+             displayName: 'Deploy .NET Code to Azure App Service '
+             inputs:
+              ConnectionType: 'AzureRM'
+              azureSubscription: 'Free Trial (cf12cdda-4e4c-4957-a919-d7dbc60b6fcb)'
+              appType: 'webAppLinux'
+              WebAppName: $(appName)
+              packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+              RuntimeStack: 'DOTNETCORE|5.0'
