Made Karma Config Changes

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,10 +4,12 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- '*'
+- feature/*
+- main
+- master
+- develop
 
 variables:
-  solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   poolName: 'Test'
