--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -98,7 +98,7 @@ stages:
               azureSubscription: 'Free Trial (cf12cdda-4e4c-4957-a919-d7dbc60b6fcb)'
               appType: 'webApp'
               WebAppName: $(appName)
-              packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
+              packageForLinux: '$(Agent.WorkFolder)/**/*.zip'
               RuntimeStack: 'DOTNETCORE|5.0'
 
 - stage: 'DeployTest'
@@ -121,5 +121,5 @@ stages:
               azureSubscription: 'Free Trial (cf12cdda-4e4c-4957-a919-d7dbc60b6fcb)'
               appType: 'webAppLinux'
               WebAppName: $(appName)
-              packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
+              packageForLinux: '$(Agent.WorkFolder)/**/*.zip'
               RuntimeStack: 'DOTNETCORE|5.0'
