--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,13 +43,13 @@ stages:
         verbose: false
         customCommand: 'run build'
 
-    - task: Npm@1
-      displayName: 'Test UI'
-      inputs:
-        command: custom
-        workingDir: 'ClientApp'
-        verbose: false
-        customCommand: 'run test --watch=false'
+    # - task: Npm@1
+    #   displayName: 'Test UI'
+    #   inputs:
+    #     command: custom
+    #     workingDir: 'ClientApp'
+    #     verbose: false
+    #     customCommand: 'run test --watch=false'
 
     # Middle Layer
     - task: DotNetCoreCLI@2
@@ -98,7 +98,7 @@ stages:
               azureSubscription: 'Free Trial (cf12cdda-4e4c-4957-a919-d7dbc60b6fcb)'
               appType: 'webApp'
               WebAppName: $(appName)
-              packageForLinux: '$(Agent.WorkFolder)/**/*.zip'
+              packageForLinux: '$(Agent.WorkFolder)/$(Build.BuildId)/drop/$(buildConfiguration)/*.zip'
               RuntimeStack: 'DOTNETCORE|5.0'
 
 - stage: 'DeployTest'
@@ -121,5 +121,5 @@ stages:
               azureSubscription: 'Free Trial (cf12cdda-4e4c-4957-a919-d7dbc60b6fcb)'
               appType: 'webAppLinux'
               WebAppName: $(appName)
-              packageForLinux: '$(Agent.WorkFolder)/**/*.zip'
+              packageForLinux: '$(Pipeline.Workspace)/**/*.zip'
               RuntimeStack: 'DOTNETCORE|5.0'
