--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -121,5 +121,5 @@ stages:
               azureSubscription: 'Free Trial (cf12cdda-4e4c-4957-a919-d7dbc60b6fcb)'
               appType: 'webAppLinux'
               WebAppName: $(appName)
-              packageForLinux: '$(Pipeline.Workspace)/**/*.zip'
+              packageForLinux: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
               RuntimeStack: 'DOTNETCORE|5.0'
