--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,8 +78,8 @@ stages:
     - publish: '$(Build.ArtifactStagingDirectory)'
       artifact: drop
 
-- stage: 'DeployDev'
-  displayName: 'Deploy to Dev'
+# - stage: 'DeployDev'
+#   displayName: 'Deploy to Dev'
   # variables: 
   #   appName: 'AS3KDemo'
   # jobs:
