--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,33 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
-steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+stages:
+- stage: 'Build'
+  jobs:
+  - job:
+    steps:  
+    - task: Npm@1
+      inputs:
+        command: 'install'
+        workingDir: 'ClientApp'
+    
+    - task: Npm@1
+      inputs:
+        command: 'ci'
+        workingDir: 'ClientApp'
+
+    - script: dotnet build --configuration $(buildConfiguration)
+      displayName: 'dotnet build $(buildConfiguration)'
+   
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'publish'
+        publishWebProjects: true
+        arguments: '--configuration  $(buildConfiguration)  --output $(build.ArtifactStagingDirectory)/$(buildConfiguration)'
+        zipAfterPublish: true
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
