--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -14,6 +14,7 @@ variables:
   buildConfiguration: 'Release'
   poolName: 'Test'
   artifaceName: drop
+  isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
 
 stages:
 - stage: 'Build'
@@ -104,6 +105,7 @@ stages:
 
 - stage: 'DeployTest'
   displayName: 'Deploy to Test'
+  condition: and(succeeded(), eq(variables.isMain, 'true'))
   variables: 
     appName: 'AS3KTest'
   jobs:
