--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
       inputs:
         command: 'custom'
         workingDir: 'ClientApp'
-        customCommand: 'run test -- watch=false'
+        customCommand: 'run test --watch=false'
 
 
   - job: 'BuildDotnet'
@@ -61,6 +61,7 @@ stages:
         zipAfterPublish: true
 
   - job: 'PublishArtifacts'
+    dependsOn: BuildClient
     steps: 
     - task: PublishBuildArtifacts@1
       inputs:
