--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,8 @@ trigger:
 
 pool:
   name: 'Demo'
+  artifaceName: drop
+  isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
 
 variables:
   config: 'Release'
