--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
-  poolName: 'demo'
+  poolName: 'demo1'
   artifaceName: cpo
   tag: '$(Build.BuildId)'
 
