--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
       inputs:
         command: 'ci'
         workingDir: 'ClientApp'
-    - script: dontnet build --configuration $(buildConfiguration)
+    - script: dotnet build --configuration $(buildConfiguration)
       displayName: 'dotnet biuld $(buildConfiguration)'
     
     - task: DotNetCoreCLI@2
