--- a/deployment.yml
+++ b/deployment.yml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  MYAPP
-  namespace: default
+  name:  WalmartPayment
+  namespace: walmart
   labels:
-    app:  MYAPP
+    app:  WalmartPayment
 spec:
   selector:
     matchLabels:
-      app: MYAPP
+      app: WalmartPayment
   replicas: 1
   strategy:
     rollingUpdate:
@@ -18,18 +18,20 @@ spec:
   template:
     metadata:
       labels:
-        app:  MYAPP
+        app:  WalmartPayment
     spec:
       # initContainers:
         # Init containers are exactly like regular containers, except:
           # - Init containers always run to completion.
           # - Each init container must complete successfully before the next one starts.
       containers:
-      - name:  MYAPP
-        image:  MYAPP:latest
+      - name:  WalmartPayment
+        image:  api123:1.0.1
+        imagePullSecrets:
+        - name: regcred
         resources:
           requests:
-            cpu: 100m
+            cpu: 1000m
             memory: 100Mi
           limits:
             cpu: 100m
