--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ stages:
     steps:
     - task: Docker@2
       inputs:
-        containerRegistry: 'Docker Hub Connection'
+        containerRegistry: 'Docker'
         repository: 'walmartpayment'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
